--- a/pom.xml
+++ b/pom.xml
@@ -47,26 +47,23 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>4.1.2</version>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/in.jlibs/jlibs-xsd -->
 		<dependency>
-		    <groupId>in.jlibs</groupId>
-		    <artifactId>jlibs-xsd</artifactId>
-		    <version>2.1</version>
+			<groupId>in.jlibs</groupId>
+			<artifactId>jlibs-xsd</artifactId>
+			<version>2.1</version>
 		</dependency>
-		
-
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
 		<dependency>
-		    <groupId>org.apache.commons</groupId>
-		    <artifactId>commons-io</artifactId>
-		    <version>1.3.2</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 
 		<dependency>
@@ -75,7 +72,7 @@
 			<scope>provided</scope>
 		</dependency>
 
-		
+
 
 		<dependency>
 			<groupId>javax.servlet</groupId>
